<resources>
    <string name="app_name">Prix Finance</string>
    <string name="txt_dashBoard">Dashboard</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_budgetManagement">Budget Management</string>
    <string name="txt_transactions">Transactions</string>
    <string name="txt_financialOverview">Financial Overview</string>
    <string name="txt_goals">Goals</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_logOut">Logout</string>
    <string name="txt_greeting">Hello, User!</string>
    <string name="tgl_open">Open</string>
    <string name="tgl_close">Close</string>
    <string name="btn_getStarted">Get Started</string>
    <string name="txt_AppDesc">Keeping Your Finances on Track</string>
    <string name="txt_toolbarDesc">App Toolbar</string>
    <string name="txt_imageDesc">App Logo</string>
    <string name="txtOut_BudId">Budget Id</string>
    <string name="txtOut_BudAmount">Amount</string>
    <string name="txtOut_BudCategory">Category</string>
    <string name="txtOut_BudPeriod">Period</string>
    <string name="txtOut_BudCreated">Created At</string>
    <string name="txt_DisplayQuestion">Select A Budget Option \n From Below</string>
    <string name="txt_Currency">R</string>
    <string name="txt_totBal">Total Balance</string>
    <string name="output_NetBalance">2309.02</string>
    <string name="txt_budgets">Budgets</string>
    <string name="txt_addBudgets">+</string>
    <string name="txt_btnBack">Back</string>
    <string name="txt_btnCreate">Create</string>
    <string name="txt_btnView">View</string>
    <string name="txt_btnDelete">Delete</string>
    <string name="txt_btnUpdate">Update</string>
    <string name="txt_budgetName">Birthday</string>
    <string name="txt_statusOnTrack">On Track</string>
    <string name="txt_statusCaution">Caution</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>


</resources>


