<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BudgetManagementFragment"
    android:background="@color/bg_night">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- This is the toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarBudgetManagement"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/txt_toolbarDesc"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/txt_budgetManagement"
            android:textAlignment="center"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_imageDesc"
            android:src="@drawable/prix_logo"
            android:layout_marginEnd="12dp">
        </com.google.android.material.imageview.ShapeableImageView>

    </androidx.appcompat.widget.Toolbar>

    <!-- This is the budget options -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarBudgetManagement"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_DisplayQuestion"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="25sp"
            android:fontFamily="sans-serif-condensed-medium"

            />

        <!--fixed the error, issue was The supportFragmentManager is not directly accessible within a fragment. a parent is used for fragments.-->

        <Button
            android:id="@+id/btnViewBudgets"
            android:layout_gravity ="center"
            android:background="@drawable/bg_newbutton"
            android:layout_marginTop="75dp"
            android:text="@string/txt_btnView"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnCreateBudgets"
            android:layout_gravity ="center"
            android:background="@drawable/bg_newbutton"
            android:layout_marginTop="35dp"
            android:text="@string/txt_btnCreate"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnUpdateBudgets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_newbutton"
            android:text="@string/txt_btnUpdate"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDeleteBudgets"
            android:layout_gravity ="center"
            android:background="@drawable/bg_newbutton"
            android:layout_marginTop="35dp"
            android:text="@string/txt_btnDelete"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>